Organização de arquivos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>ROCKETSEAT - Curso JavaScript</h1>
-    <script src="/modulo1.js"></script>
+    <script src="/js/modulo1.js"></script>
 </body>
 </html>
