--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
         <button>Adicionar</button>
     </div>
 
+    <h3>Módulo 4</h3>
+
+    <input type="text" id="user" />
+    <button onclick="getUserRepo()">Adicionar</button>
+    <ul id="mod4"></ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- <script src="/js/modulo1.js"></script> -->
     <!-- <script src="/js/modulo2.js"></script> -->
     <!-- <script src="/js/modulo3.js"></script> -->
+    <!-- <script src="/js/modulo4.js"></script> -->
 </body>
 </html>
